k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip-app-service
spec:
  selector:
    app: ip-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
